--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
-        <p class="total-price">Preço total: $0</p>
+        <div class="total-price">
+          <p>Preço total: $0</p>
+        </div>
       </section>
     </section>
     <script src="script.js"></script>
