--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
-        <div class="total-price">
-          <p>Preço total: $0</p>
-        </div>
+        <div class="total-price"></div>
       </section>
     </section>
     <script src="script.js"></script>
