--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>ShoppingCart</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  
+
   <body>
+    <header>
+      <img src="./Img/Logo.png" alt="Logotipo do site" class="logo" />
+    </header>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
